# bctqr

./: .gitignore  bct-qr.sh  pyproject.toml
bctqr/barcode/: __init__.py
bctqr/cli/: __init__.py
bctqr/images/: __init__.py
bctqr/label/: __init__.py  barcodelabel.py  defs.py  gen.py  qrlabel.py
bctqr/qr/: __init__.py
